# encoding2mediaconvert

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  analysis_summary.json  analyze_errors.py  analyze_errors_with_ids.py  error_summary.md  error_summary_grouped.md  error_summary_with_ids.md  extract_json_names.sh  organize_pilot_files.py  pilot_formats_v2.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_enhanced_converter.py  test_output_54.json  upload_json_to_s3.sh  validate_setup.py
.kiro/steering/: product.md  structure.md  tech.md
backup/analyzer/: setup.py  simple_analyzer.py  video_analyzer.py  video_analyzer_fixed.py
backup/converter/: __init__.py  documentation.md  setup.py
backup/requester/: example.py  mediaconvert_job_submitter.py
encoding_profiles/: 1.xml  100.xml  1006.xml  1010.xml  1014.xml  102.xml  1026.xml  1033.xml  1040.xml  1042.xml  1048.xml  1070.xml  144.xml  181.xml  20.xml  254.xml  27.xml  340.xml  365.xml  437.xml  440.xml  456.xml  460.xml  463.xml  464.xml  482.xml  491.xml  505.xml  519.xml  523.xml  527.xml  55.xml  558.xml  559.xml  575.xml  578.xml  579.xml  61.xml  63.xml  634.xml  (+38 more)
encoding_profiles/advanced_dash/: 1019.xml  1063.xml  520.xml  898.xml  956.xml  976.xml
encoding_profiles/advanced_hls/: 1066.xml  220.xml  223-1.xml  223.xml  241.xml  282.xml  487.xml  696.xml  889.xml  892.xml  941.xml
encoding_profiles/all/: 1009.xml  101.xml  1017.xml  1021.xml  1031.xml  1057.xml  1058.xml  1059.xml  1060.xml  1061.xml  1071.xml  108.xml  109.xml  111.xml  113.xml  114.xml  127.xml  128.xml  159.xml  336.xml  337.xml  351.xml  369.xml  438.xml  459.xml  465.xml  493.xml  521.xml  525.xml  542.xml  544.xml  554.xml  568.xml  577.xml  58.xml  60.xml  606.xml  692.xml  695.xml  718.xml  (+28 more)
encoding_profiles/fmp4_hls/: 564.xml  626.xml  647.xml  698.xml  714.xml  726.xml  730.xml
encoding_profiles/ipad_stream/: 54.xml  788.xml  830.xml  863.xml  876.xml  877.xml
encoding_profiles/iphone/: 129.xml  276.xml  865.xml
encoding_profiles/mov/: 560.xml
encoding_profiles/mp4/: 1002.xml  1003.xml  1004.xml  1005.xml  1007.xml  1011.xml  1012.xml  1013.xml  1015.xml  1016.xml  1030.xml  1046.xml  1052.xml  1062.xml  1064.xml  110.xml  112.xml  143.xml  145.xml  162.xml  164.xml  17.xml  19.xml  23.xml  234.xml  238.xml  341.xml  342.xml  429.xml  434.xml  435.xml  443.xml  455.xml  457.xml  496.xml  50.xml  504.xml  522.xml  526.xml  528.xml  (+58 more)
encoding_profiles/mpeg_dash/: 607.xml
encoding_profiles/mpegts/: 1039.xml  1041.xml  199.xml  684.xml  691.xml  778.xml  779.xml  829.xml  946.xml
source_profile/: encoding_profiles.csv  filtered_encoding_profiles.csv
tests/: test_output_group_generator.py  test_stream_processor.py
tranformed_mc_profiles/: 1-setting.json
utils/: README.md  extract_xml.py  find_missing_videos.py  find_profiles_without_videos.py  find_profiles_without_videos_improved.py  organize_encoding_profiles.sh  organize_s3_videos.py  organize_s3_videos_improved.py  summarize_parameters.py
(+691 files in other folders)
